# dggt

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  README  README.md  a.out  build.sh  config.h.in  configure  configure.ac  configure.scan  dggt_test  donations.html  gccerr.out
.project/: coll  defines  dggt  dggt.project  math  math.lin  mem  modules  test  tmpl  types
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
docs/: Doxyfile  README.md  donate.md  err.out  mainpage.md
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_0c0c9fa8a58db41e576adc3ce68c5ee9.html  dir_120ed4da3e3217b1e7fc0b4f48568e79.html  dir_44d5bc2300862405dbe586a8cb303c4f.html  dir_5c994fd39c0acb757ebe238c3c919a86.html  dir_5d9bc4da88b6add5415aa941782c7441.html  dir_622d6f97fa5c1d8a93db70ff15b3a1df.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_798ee6f4f5cd9c6410c07a649b7662ec.html  dir_ae9a93452e2a84339148a16bcf2eb561.html  dir_c36e9c308980bdbd6d8cd23a96e48846.html  dir_d2884df862e50eff1b610efadb0bf381.html  donate.html  files.html  files_dup.js  functions.html  functions.html.orig  functions_d.html  functions_dup.js  functions_e.html  functions_func.html  functions_func.html.orig  functions_func.js  functions_func_d.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  functions_func_o.html  functions_func_p.html  functions_func_s.html  functions_func_t.html  functions_func_v.html  functions_g.html  functions_h.html  functions_i.html  (+41 more)
docs/html/d0/d0b/: structdggt_1_1stack.html  structdggt_1_1stack.js
docs/html/d0/d0e/: structdggt_1_1hash__table.html  structdggt_1_1hash__table.js
docs/html/d0/d1b/: dggt__math__vec3_8h_source.html
docs/html/d0/d23/: structdggt_1_1allocator.html  structdggt_1_1allocator.js
docs/html/d0/d2c/: structdggt_1_1free__alloc-members.html
docs/html/d0/d30/: md_README.html
docs/html/d0/d39/: structdggt_1_1blk.html  structdggt_1_1blk.js
docs/html/d0/d49/: group__coll.html  structdggt_1_1free__list__alloc__-members.html  structdggt_1_1sized__block-members.html
docs/html/d0/d4a/: structdggt_1_1slnode-members.html
docs/html/d0/d4d/: dggt__mem__table__alloc_8h_source.html
docs/html/d0/d4e/: structdggt_1_1queue__iter.html  structdggt_1_1queue__iter.js
docs/html/d0/d51/: structdggt_1_1stack__alloc__.html  structdggt_1_1stack__alloc__.js
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  enums_0.js  (+55 more)
docs/latex/: annotated.tex  files.tex  namespaces.tex  refman.tex
src/: dggt.h  dggt_defines.h  dggt_types.h  mem_dggt_mem_stack_alloc.inl
src/coll/: dggt_coll.h  dggt_coll_array.h  dggt_coll_array.inl  dggt_coll_array_iter.h  dggt_coll_array_iter.inl  dggt_coll_array_key.h  dggt_coll_array_mem.h  dggt_coll_bin_tree.h  dggt_coll_bintree.h  dggt_coll_block_list.h  dggt_coll_block_list_iter.h  dggt_coll_block_list_iter.inl  dggt_coll_chntable.h  dggt_coll_chntable.inl  dggt_coll_chntable_iter.h  dggt_coll_chntable_iter.inl  dggt_coll_collection.h  dggt_coll_common.h  dggt_coll_defines.h  dggt_coll_deque_iter.h  dggt_coll_dequeue.h  dggt_coll_dllist.h  dggt_coll_dllist.inl  dggt_coll_dllist_iter.h  dggt_coll_dllist_iter.inl  dggt_coll_dllist_key.h  dggt_coll_dllist_mem.h  dggt_coll_dlnode.h  dggt_coll_graph.h  dggt_coll_graph.inl  dggt_coll_graph_edge.h  dggt_coll_graph_node.h  dggt_coll_graph_node.inl  dggt_coll_hash.c++  dggt_coll_hash.h  dggt_coll_hash_table.c++  dggt_coll_hash_table.h  dggt_coll_hash_table.inl  dggt_coll_heap.h  dggt_coll_heap.inl  (+55 more)
src/debug/: dggt_debug_defines.h
src/defines/: dggt_defines.h
src/math/: dggt_math.h  dggt_math_constants.h  dggt_math_defines.h  dggt_math_mat.h  dggt_math_mat.inl  dggt_math_mat2.inl  dggt_math_utils.h  dggt_math_vec.h  dggt_math_vec1.h  dggt_math_vec2.h
src/math/lin/: dggt_math_mat.h  dggt_math_mat.inl  dggt_math_mat2.h  dggt_math_mat2.inl  dggt_math_mat3.h  dggt_math_mat3.inl  dggt_math_mat4.h  dggt_math_mat4.inl  dggt_math_matn.h  dggt_math_matn.inl  dggt_math_transforms.h  dggt_math_transforms.inl  dggt_math_vec.h  dggt_math_vec.inl  dggt_math_vec1.h  dggt_math_vec1.inl  dggt_math_vec2.h  dggt_math_vec2.inl  dggt_math_vec3.h  dggt_math_vec3.inl  dggt_math_vec4.h  dggt_math_vec4.inl
src/mem/: dggt_mem.c++  dggt_mem.cpp  dggt_mem.h  dggt_mem.inl  dggt_mem_alloc.cpp  dggt_mem_alloc.h  dggt_mem_alloc.inl  dggt_mem_allocator.c++  dggt_mem_allocator.cpp  dggt_mem_allocator.h  dggt_mem_allocator.inl  dggt_mem_autostack_alloc.c++  dggt_mem_autostack_alloc.h  dggt_mem_autostack_alloc.inl  dggt_mem_blk.cpp  dggt_mem_blk.h  dggt_mem_blk.inl  dggt_mem_block.h  dggt_mem_buff_alloc.c++  dggt_mem_buff_alloc.h  dggt_mem_buff_table.h  dggt_mem_defines.h  dggt_mem_fallback_alloc.cpp  dggt_mem_fallback_alloc.h  dggt_mem_fallback_alloc.inl  dggt_mem_free_alloc.c++  dggt_mem_free_alloc.cpp  dggt_mem_free_alloc.h  dggt_mem_free_alloc.inl  dggt_mem_free_list.h  dggt_mem_free_list_alloc.cpp  dggt_mem_free_list_alloc.h  dggt_mem_free_list_alloc.inl  dggt_mem_free_store.h  dggt_mem_free_store.inl  dggt_mem_lin_alloc.c++  dggt_mem_lin_alloc.cpp  dggt_mem_lin_alloc.h  dggt_mem_lin_alloc.inl  dggt_mem_linear_alloc.cpp  (+42 more)
src/test/: dggt_test_linux.c++  dggt_test_linux.cpp
src/time/: dggt_clock.h
src/tmpl/: dggt_tmpl.h  dggt_tmpl_bool_types.h  dggt_tmpl_enable_if.h  dggt_tmpl_integral_constant.h  dggt_tmpl_is_base_of.h  dggt_tmpl_is_class.h  dggt_tmpl_is_same.h  dggt_tmpl_is_type.h  dggt_tmpl_is_union.h  dggt_tmpl_math.h  dggt_tmpl_nocv.h  dggt_tmpl_sequence.h  dggt_tmpl_tuple.h  dggt_tmpl_type_list.h
src/types/: dggt_types.h
(+456 files in other folders)
